// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: critical 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-critical-base);"
  >
    assistant_photo
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: major 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-major-base);"
  >
    assistant_photo
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: minor 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-minor-base);"
  >
    assistant_photo
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with state: ok 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-state-ok-base);"
  >
    assistant_photo
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: cancelled 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-cancelled-base);"
  >
    highlight_off
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: closed 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-closed-base);"
  >
    check_circle_outline
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: flapping 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-flapping-base);"
  >
    swap_vert
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: noEvents 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-noEvents-base);"
  >
    sync_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: ongoing 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-ongoing-base);"
  >
    warning
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with status: stealthy 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="caret-color: var(--v-status-stealthy-base);"
  >
    swap_vert
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: ack 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
  >
    playlist_add_check
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: ackRemove 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
  >
    not_interested
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: assocTicket 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    local_play
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionAlreadyRunning 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: autoInstructionStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: cancel 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    delete
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: changeState 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    thumbs_up_down
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: check 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: comment 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(186, 104, 200); caret-color: #ba68c8;"
  >
    comment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: createManualMetaAlarm 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    center_focus_strong
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: declareTicket 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    report_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: declareTicketFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    report_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: delete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    delete
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: executeInstruction 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: fastAck 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    check
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: group 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionAbort 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobAbort 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionJobStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionPause 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionResume 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: instructionStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    assignment
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: invalidate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    thumb_down
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: junitTestCaseUpdate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    keyboard_arrow_up
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: junitTestSuiteUpdate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    keyboard_arrow_up
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: metaalarmattach 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(109, 76, 65); caret-color: #6d4c41;"
  >
    center_focus_weak
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pause 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    pause
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbehaviorAdd 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    pause
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbehaviorList 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    list
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbhenter 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(24, 255, 255); caret-color: #18ffff;"
  >
    pause
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: pbhleave 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(24, 255, 255); caret-color: #18ffff;"
  >
    play_arrow
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: play 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    play_arrow
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: removeAlarmsFromAutoMetaAlarm 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    link_off
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: removeAlarmsFromManualMetaAlarm 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    link_off
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: snooze 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(233, 30, 99); caret-color: #e91e63;"
  >
    alarm
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statedec 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: stateinc 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statusdec 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: statusinc 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: uncancel 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    delete_forever
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: unsooze 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
    style="color: rgb(0, 0, 0); caret-color: #000;"
  >
    clear
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: validate 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    thumb_up
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookComplete 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    report_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookFail 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    report_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px);"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;

exports[`alarms-time-line-flag Renders \`alarms-time-line-flag\` with type: webhookStart 1`] = `
<span
  class="v-badge time-line-flag v-badge--overlap theme--light"
>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    report_problem
  </i>
  <span
    class="v-badge__wrapper"
  >
    <transition-stub
      name="scale-rotate-transition"
    >
      <span
        aria-atomic="true"
        aria-label="Badge"
        aria-live="polite"
        class="v-badge__badge transparent"
        role="status"
        style="bottom: calc(100% - 12px); left: calc(100% - 12px); display: none;"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate time-line-flag__badge-icon material-icons theme--light error--text"
          style="font-size: 14px;"
        >
          error
        </i>
      </span>
    </transition-stub>
  </span>
</span>
`;
